docuemnt upload validation set

--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -744,6 +744,12 @@ tbody.scroll {
   }
 }
 
+.date-error {
+  top: 40px;
+  position: absolute;
+  display: block;
+}
+
 // For mobile
 @media (max-width: 767px) {
   .chat-menu {
