view pdf and image when user upload

--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -766,7 +766,7 @@ tbody.scroll {
 
 .document-thumb {
   .react-pdf__Page__canvas {
-    width: 60px !important;
+    width: 100% !important;
     height: auto !important;
   }
 }
