new request validation set and search and docment select

--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -38,3 +38,4 @@
 @import "components/login/base";
 @import "components/subscription/base";
 @import "components/agency-management/base";
+@import "components/new-request/base";
