--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -799,6 +799,17 @@ tbody.scroll {
   }
 }
 
+.search-dropdown {
+  position: absolute;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  background: white;
+  z-index: 9;
+  max-height: 150px;
+  overflow: auto;
+}
+
 // For mobile
 @media (max-width: 767px) {
   .chat-menu {
