new job find new ui

--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -39,3 +39,4 @@
 @import "components/subscription/base";
 @import "components/agency-management/base";
 @import "components/new-request/base";
+@import "components/jobs/base";
