--- a/src/assets/components/jobs/_base.scss
+++ b/src/assets/components/jobs/_base.scss
@@ -23,7 +23,7 @@
 
 .cards__item_search {
   display: flex;
-  padding: 4px 14px;
+  padding: 0 14px;
   background: #bcf2ff;
   border: 1px solid #20b2d6;
   border-radius: 15px;
